[package]
name = "yui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
poise = "0.6.1"
reqwest = { version = "0.12.4", features = ["blocking", "json"] }
serenity = { version = "0.12.1", default-features = false, features = ["client", "gateway", "rustls_backend", "model"] }
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
serde_json = "1.0.116"
serde = { version = "1.0.199", features = ["derive"] }
